Added in full TSX migration and small code reorganization
Squashed commit of the following:

commit c20c6167e9f6757fdf15af126456216fd4292890
Author: 2lar
Date:   Sat Aug 2 23:27:44 2025 -0700

    small updates to consolidating types

commit eca8266c4f1992c0e9a573af7031e86e8745e634
Author: 2lar
Date:   Sat Aug 2 22:07:32 2025 -0700

    accidentally left in references for previous commits

commit e76a3de894ee246f8d5afecdb53cbf4ecb01ebfe
Author: 2lar
Date:   Sat Aug 2 21:42:57 2025 -0700

    Adding in useAuth hooks for clean code

commit 082b33b15ab3b4b2a15a4dd15c8e3ecd5cca944a
Author: 2lar
Date:   Sat Aug 2 20:44:32 2025 -0700

    frontend cleanup to adjust for service and components

commit 20f8806097ccac21fd1a4aced4ec11df0354cbba
Author: 2lar
Date:   Sat Aug 2 19:39:33 2025 -0700

    cool diagram to save

commit 9e5fbdf8feb73179557b89a5c704dc1aaf6bef36
Author: 2lar
Date:   Sat Aug 2 16:46:40 2025 -0700

    adding in tsx and categories/tags attempt
